--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HW-01 Ocheretniuk</title>
 </head>
 <body>
-    
+
+    <header>
+        <a href="/">WebStudio</a>
+
+        <nav>
+            <ul>
+                <li>Студія</li>
+                <li>Портфоліо</li>
+                <li>Контакти</li>
+            </ul>
+        </nav>
+        
+        <ul>
+            <li>info@devstudio.com</li>
+            <li>+38 096 111 11 11</li>
+        </ul>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+
 </body>
 </html>
