--- a/index.html
+++ b/index.html
@@ -36,8 +36,72 @@
     </header>
 
     <main>
-        <img src="./images/Bg.png" alt="">
+        <img src="./images/Bg.png" alt="Фонова заставка" width="800">
         <h1>Ефективні рішення для вашого бізнесу</h1>
+        <a href="">Замовити послугу</a>
+
+        <section>
+            <ul>
+                <li>
+                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h2>ПЛАНУВАННЯ</h2>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="./images/box 1.png" alt="Картинка 1" width="370">
+                </li>
+                <li>
+                    <img src="./images/box 2.png" alt="Картинка 2" width="370">
+                </li>
+                <li>
+                    <img src="./images/box 3.png" alt="Картинка 3" width="370">
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/worker1.jpg" alt="Працівник 1" width="270">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/worker2.jpg" alt="Працівник 2" width="270">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/worker3.jpg" alt="Працівник 3" width="270">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/worker4.jpg" alt="Працівник 4" width="270">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        
 
     </main>
 
