--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <main>
-        <img src="./images/Bg.png" alt="Фонова заставка" width="800">
+        <img src="./images/main-bg.png" alt="Фонова заставка" width="1000">
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <a href="">Замовити послугу</a>
 
@@ -101,11 +101,21 @@
                 </li>
             </ul>
         </section>
-        
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <img src="./images/footer-bg.png" alt="Фонова заставка" width="1000">
+
+        <section>
+            <a href="/">WebStudio</a>
+            <address>
+                <h4>м. Київ, пр-т Лесі Українки, 26</h4>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
+        </section>
+    </footer>
 
 </body>
 </html>
