--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./images/box 1.png" alt="Картинка 1" width="370">
+                    <img src="./images/box-1.png" alt="Картинка 1">
                 </li>
                 <li>
-                    <img src="./images/box 2.png" alt="Картинка 2" width="370">
+                    <img src="./images/box-2.png" alt="Картинка 2">
                 </li>
                 <li>
-                    <img src="./images/box 3.png" alt="Картинка 3" width="370">
+                    <img src="./images/box-3.png" alt="Картинка 3">
                 </li>
             </ul>
         </section>
@@ -80,22 +80,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/worker1.jpg" alt="Працівник 1" width="270">
+                    <img src="./images/worker-1.jpg" alt="Працівник 1">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/worker2.jpg" alt="Працівник 2" width="270">
+                    <img src="./images/worker-2.jpg" alt="Працівник 2">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/worker3.jpg" alt="Працівник 3" width="270">
+                    <img src="./images/worker-3.jpg" alt="Працівник 3">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/worker4.jpg" alt="Працівник 4" width="270">
+                    <img src="./images/worker-4.jpg" alt="Працівник 4">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -107,14 +107,14 @@
     <footer>
         <img src="./images/footer-bg.png" alt="Фонова заставка" width="1000">
 
-        <section>
-            <a href="/">WebStudio</a>
-            <address>
-                <h4>м. Київ, пр-т Лесі Українки, 26</h4>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
-        </section>
+        <a href="/">WebStudio</a>
+
+        <address>
+            м. Київ, пр-т Лесі Українки, 26
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+
     </footer>
 
 </body>
