правки згідно критерій ДЗ

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <img src="./images/main-bg.png" alt="Фонова заставка" width="1000">
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <a href="">Замовити послугу</a>
+        <button>Замовити послугу</button>
 
         <section>
             <ul>
@@ -65,13 +65,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="./images/box-1.png" alt="Картинка 1">
+                    <img src="./images/box-1.jpg" alt="Робочий процес" width="370">
                 </li>
                 <li>
-                    <img src="./images/box-2.png" alt="Картинка 2">
+                    <img src="./images/box-2.jpg" alt="Робочий процес" width="370">
                 </li>
                 <li>
-                    <img src="./images/box-3.png" alt="Картинка 3">
+                    <img src="./images/box-3.jpg" alt="Робочий процес" width="370">
                 </li>
             </ul>
         </section>
@@ -80,22 +80,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/worker-1.jpg" alt="Працівник 1">
+                    <img src="./images/worker-1.jpg" alt="Працівник 1" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/worker-2.jpg" alt="Працівник 2">
+                    <img src="./images/worker-2.jpg" alt="Працівник 2" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/worker-3.jpg" alt="Працівник 3">
+                    <img src="./images/worker-3.jpg" alt="Працівник 3" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/worker-4.jpg" alt="Працівник 4">
+                    <img src="./images/worker-4.jpg" alt="Працівник 4" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
