--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header>
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
 
         <nav>
             <ul>
@@ -46,26 +46,27 @@
     </header>
 
     <main>
-        <img src="./images/main-bg.png" alt="Фонова заставка" width="1000">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button>Замовити послугу</button>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
+        </section>
 
         <section>
             <ul>
                 <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h2>ПЛАНУВАННЯ</h2>
+                    <h3>ПЛАНУВАННЯ</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -115,12 +116,10 @@
     </main>
 
     <footer>
-        <img src="./images/footer-bg.png" alt="Фонова заставка" width="1000">
-
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
 
         <address>
-            м. Київ, пр-т Лесі Українки, 26
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
